--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import astro from '../assets/about-astro.png'
 
 import { getAllPosts, sortMDByDate } from '@/utils'
 
-const languages = ['lorem', 'ipsum']
-const frontend = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
+const languages = ['TypeScript', 'JavaScript', 'HTML', 'CSS', 'Python', 'Java', 'C++', 'C#']
+const frontend = ['Svelte', 'React', 'TailwindCSS']
 const backend = ['lorem', 'ipsum', 'lorem', 'ipsum']
 const others = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
 
@@ -33,22 +33,22 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			/>
 
 			<div class='flex flex-col items-center gap-y-4'>
-				<h1 class='text-3xl font-bold'>Lorem ipsum dolor</h1>
-				<a
+				<h1 class='text-3xl font-bold'>Jimmi Mortensen</h1>
+				<!-- <a
 					href='https://github.com/srleom/astro-theme-resume.git'
-					class='flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
+					class='flex flex-row items-center px-4 py-2 text-sm transition-all border shadow-sm gap-x-3 rounded-3xl border-input hover:shadow-md'
 				>
 					<span class='relative flex items-center justify-center'>
 						<span
-							class='absolute inline-flex h-2 w-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
+							class='absolute inline-flex w-2 h-2 bg-green-400 border border-green-400 rounded-full opacity-75 animate-ping'
 						></span>
-						<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
+						<span class='relative inline-flex w-2 h-2 bg-green-400 rounded-full'></span>
 					</span>
 
 					<p class='font-medium'>Get template</p>
-				</a>
-				<div class='flex gap-x-7 flex-wrap gap-y-3 justify-center'>
-					<Label title='Lorem Ipsum'>
+				</a> -->
+				<div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
+					<Label title='Wisory'>
 						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
 							><path
 								fill='currentColor'
@@ -56,7 +56,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 							></path></svg
 						>
 					</Label>
-					<Label title='Ipsum'>
+					<Label title='Aarhus, Denmark'>
 						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
 							><path
 								fill='currentColor'
@@ -67,7 +67,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 					<Label
 						title='Connect on Linkedin'
 						as='a'
-						href='https://www.linkedin.com/in/example/'
+						href='https://www.linkedin.com/in/jimmigmortensen/'
 						target='_blank'
 					>
 						<svg
@@ -87,10 +87,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis atque quia omnis
-				consectetur, voluptas praesentium veniam blanditiis ratione asperiores accusantium laborum
-				odit commodi quis deserunt incidunt et dolor iure ut! Lorem ipsum dolor sit, amet
-				consectetur adipisicing elit. Alias quia, doloribus ut beatae perspiciatis voluptatibus.
+				I am a full-stack web developer, aspiring entrepreneur and IT Architecture student. I am
+				passionate about creating value for others and I am always looking for new opportunities to
+				learn and grow.
 			</p>
 		</Section>
 
