--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,12 +9,12 @@
 		>
 			<div class='flex gap-x-4 text-sm'>
 				<!-- <a
-          class='inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
+          class='inline-flex text-gray-600 gap-x-2 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
           href='/terms'>Terms</a
         >
 
         <a
-          class='inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
+          class='inline-flex text-gray-600 gap-x-2 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
           href='/privacy'>Privacy</a
         > -->
 				<p class=''>© 2024 lorem. All rights reserved.</p>
@@ -26,7 +26,7 @@
 					<!-- Linkedin -->
 					<a
 						class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
-						href='https://www.linkedin.com/in/example/'
+						href='https://www.linkedin.com/in/jimmigmortensen/'
 					>
 						<svg
 							class='h-4 w-4 flex-shrink-0'
