--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,9 +26,11 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 	<div class='flex w-full flex-col gap-y-10'>
 		<section class='flex flex-col items-center gap-y-7'>
 			<Image
-				src={astro}
+				src='https://avatars.githubusercontent.com/u/52856973?v=4'
+				width={140}
+				height={140}
 				alt='profile photo'
-				class='h-28 w-auto rounded-full bg-[#FFBE98] p-2'
+				class='h-32 w-auto rounded-full'
 				loading='eager'
 			/>
 
