--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import SkillLayout from '../components/SkillLayout.astro'
 import PostPreview from '@/components/blog/PostPreview.astro'
 
 import { Image } from 'astro:assets'
-import astro from '../assets/about-astro.png'
+import jimmi from '../assets/Jimmi.png'
 
 import { getAllPosts, sortMDByDate } from '@/utils'
 
@@ -26,7 +26,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 	<div class='flex w-full flex-col gap-y-10'>
 		<section class='flex flex-col items-center gap-y-7'>
 			<Image
-				src='https://avatars.githubusercontent.com/u/52856973?v=4'
+				src={jimmi}
 				width={140}
 				height={140}
 				alt='profile photo'
