--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -28,10 +28,10 @@ if (!images[imagePath])
 	<Image
 		src={images[imagePath]()}
 		alt={altText}
-		class='h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover'
+		class='object-cover w-full h-48 rounded-bl-none rounded-br-none rounded-2xl'
 		loading='eager'
 	/>
-	<div class='flex flex-col gap-y-0.5 px-5 py-4'>
+	<div class='flex flex-col gap-y-0.5 px-5 pb-6 pt-2'>
 		<h1 class='text-lg font-medium'>{heading}</h1>
 		<h2 class='text-muted-foreground'>{subheading}</h2>
 	</div>
