--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,21 +9,9 @@ const meta = {
 ---
 
 <PageLayout meta={meta}>
-	<a
-		href='https://github.com/srleom/astro-theme-resume.git'
-		class='flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
-	>
-		<span class='relative flex items-center justify-center'>
-			<span
-				class='absolute inline-flex h-2 w-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-			></span>
-			<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
-		</span>
-
-		<p class='font-medium'>Get template</p>
-	</a>
+	
 	<div class='px-4 py-10 text-center sm:px-6 lg:px-8'>
-		<h1 class='block text-7xl font-bold sm:text-9xl'>404</h1>
+		<h1 class='block font-bold text-7xl sm:text-9xl'>404</h1>
 		<p class='mt-3 text-muted-foreground'>Oops, something went wrong.</p>
 		<p class=''>Sorry, we couldn't find your page.</p>
 		<Button title='Back to home' href='/' style='button' class='mt-5'>
