--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -63,7 +63,7 @@ const paginationProps = {
 			</svg>
 		</Button>
 
-		<h1 class='mb-6 mt-5 text-2xl font-bold'>Blog</h1>
+		<h1 class='mt-5 mb-6 text-2xl font-bold'>Blog</h1>
 		<div class='grid gap-y-16 sm:grid-cols-[3fr_1fr] sm:gap-x-8'>
 			<section aria-label='Blog posts list'>
 				<ul class='flex flex-col gap-y-4 text-start'>
@@ -74,10 +74,10 @@ const paginationProps = {
 			{
 				!!uniqueTags.length && (
 					<aside>
-						<h2 class='mb-4 flex items-center text-lg font-semibold'>
+						<h2 class='flex items-center mb-4 text-lg font-semibold'>
 							<svg
 								aria-hidden='true'
-								class='h-6 w-6'
+								class='w-6 h-6'
 								fill='none'
 								stroke='currentColor'
 								stroke-linecap='round'
@@ -93,14 +93,14 @@ const paginationProps = {
 							</svg>
 							Tags
 						</h2>
-						<ul class='text-bgColor flex flex-wrap gap-2'>
+						<ul class='flex flex-wrap gap-2 text-bgColor'>
 							{uniqueTags.map((tag) => (
 								<li>
 									<Button title={tag} href={`/tags/${tag}/`} style='pill' />
 								</li>
 							))}
 						</ul>
-						<span class='mt-4 block sm:text-end'>
+						<span class='block mt-4 sm:text-end'>
 							<a aria-label='View all blog categories' class='' href='/tags/' data-astro-prefetch>
 								View all →
 							</a>
@@ -109,18 +109,6 @@ const paginationProps = {
 				)
 			}
 		</div>
-		<a
-			href='https://github.com/srleom/astro-theme-resume.git'
-			class='mt-16 inline-flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
-		>
-			<span class='relative flex items-center justify-center'>
-				<span
-					class='absolute inline-flex h-2 w-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-				></span>
-				<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
-			</span>
-
-			<p class='font-medium'>Get template</p>
-		</a>
+		
 	</div>
 </PageLayout>
