--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ import jimmi from '../assets/Jimmi.png'
 
 import { getAllPosts, sortMDByDate } from '@/utils'
 
-const languages = ['TypeScript', 'JavaScript', 'HTML', 'CSS', 'Python', 'Java', 'C++', 'C#']
+const languages = ['TypeScript', 'JavaScript', 'HTML', 'CSS', 'Python',]
 const frontend = ['Svelte', 'React', 'TailwindCSS']
-const backend = ['lorem', 'ipsum', 'lorem', 'ipsum']
-const others = ['lorem', 'ipsum', 'lorem', 'ipsum', 'lorem']
+const backend = ['C#', 'Go']
+// const others = []
 
 const MAX_POSTS = 10
 const allPosts = await getAllPosts()
@@ -23,35 +23,23 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 ---
 
 <PageLayout meta={{ title: 'Home' }}>
-	<div class='flex w-full flex-col gap-y-10'>
+	<div class='flex flex-col w-full gap-y-10'>
 		<section class='flex flex-col items-center gap-y-7'>
 			<Image
 				src={jimmi}
 				width={140}
 				height={140}
 				alt='profile photo'
-				class='h-32 w-auto rounded-full'
+				class='w-auto h-32 rounded-full'
 				loading='eager'
 			/>
 
 			<div class='flex flex-col items-center gap-y-4'>
 				<h1 class='text-3xl font-bold'>Jimmi Mortensen</h1>
-				<!-- <a
-					href='https://github.com/srleom/astro-theme-resume.git'
-					class='flex flex-row items-center px-4 py-2 text-sm transition-all border shadow-sm gap-x-3 rounded-3xl border-input hover:shadow-md'
-				>
-					<span class='relative flex items-center justify-center'>
-						<span
-							class='absolute inline-flex w-2 h-2 bg-green-400 border border-green-400 rounded-full opacity-75 animate-ping'
-						></span>
-						<span class='relative inline-flex w-2 h-2 bg-green-400 rounded-full'></span>
-					</span>
-
-					<p class='font-medium'>Get template</p>
-				</a> -->
+				
 				<div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-					<Label title='Wisory'>
-						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
+					<Label title='Nitor Energy'>
+						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='w-5 h-5' slot='icon'
 							><path
 								fill='currentColor'
 								d='M4.615 20q-.69 0-1.152-.462Q3 19.075 3 18.385v-9.77q0-.69.463-1.152Q3.925 7 4.615 7H9V5.615q0-.69.463-1.152Q9.925 4 10.615 4h2.77q.69 0 1.153.463q.462.462.462 1.152V7h4.385q.69 0 1.152.463q.463.462.463 1.152v9.77q0 .69-.462 1.152q-.463.463-1.153.463zm0-1h14.77q.23 0 .423-.192q.192-.193.192-.423v-9.77q0-.23-.192-.423Q19.615 8 19.385 8H4.615q-.23 0-.423.192Q4 8.385 4 8.615v9.77q0 .23.192.423q.193.192.423.192M10 7h4V5.615q0-.23-.192-.423Q13.615 5 13.385 5h-2.77q-.23 0-.423.192q-.192.193-.192.423zM4 19V8z'
@@ -59,7 +47,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 						>
 					</Label>
 					<Label title='Aarhus, Denmark'>
-						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
+						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='w-5 h-5' slot='icon'
 							><path
 								fill='currentColor'
 								d='M12.003 11.73q.668 0 1.14-.475q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472M12 19.677q2.82-2.454 4.458-4.991q1.638-2.538 1.638-4.39q0-2.744-1.737-4.53T12 3.981q-2.621 0-4.359 1.785t-1.737 4.53q0 1.852 1.638 4.39q1.639 2.537 4.458 4.99m0 1.343q-3.525-3.117-5.31-5.814q-1.786-2.697-1.786-4.909q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 2.212-1.785 4.909q-1.786 2.697-5.311 5.814m0-10.904'
@@ -76,7 +64,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 							xmlns='http://www.w3.org/2000/svg'
 							viewBox='0 0 16 16'
 							slot='icon'
-							class='h-5 w-5 text-foreground/75'
+							class='w-5 h-5 text-foreground/75'
 							><path
 								fill='currentColor'
 								d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'
@@ -89,10 +77,25 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				I am a full-stack web developer, aspiring entrepreneur and IT Architecture student. I am
-				passionate about creating value for others and I am always looking for new opportunities to
-				learn and grow.
+				I'm software developer by trade and an aspiring entrepreneur by heart, based in Aarhus, Denmark. 
+				With a background in Computer Science from Aarhus University and a Bachelor's in IT Architecture from Business Academy Aarhus, 
+				I have developed a strong foundation in the software space.
 			</p>
+			<p class='text-muted-foreground'>
+				Currently, I am working as a Software Developer at Nitor Energy, where I innovate at the intersection of software and trading. 
+				My work involves developing and scaling trading infrastructure, focusing on ETRM and data systems using TypeScript, C#, Microsoft SQL, and Azure.
+			</p>
+			<p class='text-muted-foreground'>
+				I have previous experience as a Student Software Developer at Mjølner Informatics, where I developed tools for customer agents, 
+				and as a Software Engineering Intern at FINN GmbH, where I worked on the Fleet Management team to streamline car subscription operations. 
+				At Mjølner Informatics, I also worked as a Student QA Engineer, implementing a CI/CD pipeline and working with a team to improve quality assurance standards.
+			</p>
+			<p class='text-muted-foreground'>
+				I am passionate about creating value for others and am always looking for new opportunities to learn and grow. 
+				I am a quick and perpetual learner, effectively explaining and communicating concepts and technical topics. 
+				As an entrepreneurial, technically-minded developer, I enjoy solving problems through a multidisciplinary approach.
+			</p>
+		
 		</Section>
 
 		<Section title='Posts'>
@@ -109,82 +112,114 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='Experience'>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='Software Developer'
+				subheading='Nitor Energy'
+				date='March 2024 - Present'
 				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
+				altText='Nitor Energy'
 				imageClass='h-12 w-auto md:-left-16'
+				companyWebsite="https://nitorenergy.com"
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
-					<li>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis recusandae, ut
-						molestiae laboriosam pariatur!
-
-						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, pariatur!</li>
-					</li>
+					<li>Innovated at the intersection of software and trading, employing Python, TypeScript, C#, Microsoft SQL, and Azure to push operational boundaries.</li>
+					<li>Developed and scaled trading infrastructure, focusing on ETRM and data systems.</li>
 				</ul>
 			</Card>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='Student Software Developer'
+				subheading='Mjølner Informatics'
+				date='May 2023 - March 2024'
 				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
+				altText='Mjølner Informatics'
 				imageClass='h-12 w-auto md:-left-16'
-			/>
+				companyWebsite="https://mjolner.dk"
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>Developed a tool for customer agents to easily find relevant information/data about customers.</li>
+					<li>Developed API services in C# .NET and a frontend in React with TypeScript.</li>
+				</ul>
+			</Card>
+			<Card
+				heading='Software Engineering Intern'
+				subheading='FINN GmbH'
+				date='January 2023 - May 2023'
+				imagePath='/src/assets/about-astro.png'
+				altText='FINN GmbH'
+				imageClass='h-12 w-auto md:-left-16'
+				companyWebsite="https://finn.com"
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>Worked on the Fleet Management team to streamline operations of cars in subscription including incidents, appraisals, and invoicing.</li>
+					<li>Built and maintained backend services in Go and TypeScript.</li>
+					<li>Wrote infrastructure as code using CloudFormation to manage AWS services.</li>
+				</ul>
+			</Card>
+			<Card
+				heading='Student QA Engineer'
+				subheading='Mjølner Informatics'
+				date='July 2022 - January 2023'
+				imagePath='/src/assets/about-astro.png'
+				altText='Mjølner Informatics'
+				imageClass='h-12 w-auto md:-left-16'
+				companyWebsite="https://mjolner.dk"
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>Implemented a CI/CD pipeline with Azure DevOps for automated mocking and contract testing APIs of a Microservices architecture.</li>
+					<li>Worked with a team of Test Managers and Quality Assurance engineers to create a better standard of quality assurance across the organization.</li>
+					<li>Introduced and helped newcomers of the Test Management team to the world of web development and programming.</li>
+				</ul>
+			</Card>
 		</Section>
 
 		<Section title='Education'>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='Bachelor of IT Architecture'
+				subheading='Business Academy Aarhus | University of Applied Sciences'
+				date='January 2021 - June 2024'
 				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
+				altText='Business Academy Aarhus'
 				imageClass='h-12 w-auto md:-left-16'
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
-					<li>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis recusandae, ut
-						molestiae laboriosam pariatur!
-
-						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, pariatur!</li>
-					</li>
+					<li>Studied various aspects of IT architecture, including software development, database systems, and cloud computing.</li>
 				</ul>
 			</Card>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='Computer Science'
+				subheading='Aarhus University'
+				date='August 2019 - January 2021'
 				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
+				altText='Aarhus University'
 				imageClass='h-12 w-auto md:-left-16'
-			/>
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>Focused on fundamental computer science principles, programming, and algorithms.</li>
+				</ul>
+			</Card>
 		</Section>
 
 		<Section title='Projects'>
 			<div class='flex flex-col gap-y-3 sm:flex-row sm:gap-x-3 sm:gap-y-0'>
 				<ProjectCard
-					href='https://www.google.com'
-					heading='Consectetur'
-					subheading='Lorem ipsum dolor sit amet consectetur adipisicing elit.'
+					as='div'
+					heading='Parking Spot Reservation System'
+					subheading='Developed a system for reserving parking spots using SvelteKit.'
 					imagePath='/src/assets/coming-soon.png'
-					altText='Example'
+					altText='Parking Spot Reservation System'
 					class='w-full sm:w-1/2'
 				/>
 				<ProjectCard
 					as='div'
-					heading='Coming soon...'
-					subheading=''
+					heading='Client Data Intake System'
+					subheading='Built a system to help accountants be more effective and save time.'
 					imagePath='/src/assets/coming-soon.png'
-					altText='Lorem, ipsum dolor sit'
+					altText='Client Data Intake System'
 					class='w-full sm:w-1/2'
 				/>
 			</div>
 		</Section>
 
-		<Section title='Certifications'>
+		<!-- <Section title='Certifications'>
 			<Card
 				as='a'
 				heading='Lorem ipsum, dolor sit amet consectetur adipisicing.'
@@ -205,26 +240,14 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				imageClass='h-11 w-auto md:-left-16'
 				href='https://www.google.com'
 			/>
-		</Section>
+		</Section> -->
 
 		<Section title='Skills'>
 			<SkillLayout title='Languages' skills={languages} />
 			<SkillLayout title='Frontend' skills={frontend} />
 			<SkillLayout title='Backend' skills={backend} />
-			<SkillLayout title='Others' skills={others} />
+			<!-- <SkillLayout title='Others' skills={others} /> -->
 		</Section>
 	</div>
-	<a
-		href='https://github.com/srleom/astro-theme-resume.git'
-		class='mt-16 flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
-	>
-		<span class='relative flex items-center justify-center'>
-			<span
-				class='absolute inline-flex h-2 w-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-			></span>
-			<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
-		</span>
-
-		<p class='font-medium'>Get template</p>
-	</a>
+	
 </PageLayout>
