--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -69,7 +69,7 @@ const paginationProps = {
 				</path>
 			</svg>
 		</Button>
-		<h1 class='mb-6 mt-5 flex items-end gap-x-2 text-2xl font-bold'>
+		<h1 class='flex items-end mt-5 mb-6 text-2xl font-bold gap-x-2'>
 			Tags:
 			<span class='text-xl'>#{tag}</span>
 		</h1>
@@ -79,18 +79,5 @@ const paginationProps = {
 			</ul>
 			<Pagination {...paginationProps} />
 		</section>
-		<a
-			href='https://github.com/srleom/astro-theme-resume.git'
-			class='mt-16 inline-flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
-		>
-			<span class='relative flex items-center justify-center'>
-				<span
-					class='absolute inline-flex h-2 w-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-				></span>
-				<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
-			</span>
-
-			<p class='font-medium'>Get template</p>
-		</a>
 	</div>
 </PageLayout>
