--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -30,7 +30,7 @@ const meta = {
 			</svg>
 		</Button>
 
-		<h1 class='mb-6 mt-5 text-2xl font-bold'>Tags</h1>
+		<h1 class='mt-5 mb-6 text-2xl font-bold'>Tags</h1>
 
 		<ul class='flex flex-col gap-y-3'>
 			{
@@ -51,18 +51,6 @@ const meta = {
 				))
 			}
 		</ul>
-		<a
-			href='https://github.com/srleom/astro-theme-resume.git'
-			class='mt-16 inline-flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
-		>
-			<span class='relative flex items-center justify-center'>
-				<span
-					class='absolute inline-flex h-2 w-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-				></span>
-				<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
-			</span>
-
-			<p class='font-medium'>Get template</p>
-		</a>
+		
 	</div>
 </PageLayout>
