--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import SkillLayout from '../components/SkillLayout.astro'
 import PostPreview from '@/components/blog/PostPreview.astro'
 
 import { Image } from 'astro:assets'
-import jimmi from '../assets/Jimmi.png'
+import jimmi from '../assets/Nitor Mono Profile.jpg'
 
 import { getAllPosts, sortMDByDate } from '@/utils'
 
@@ -77,7 +77,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				I'm software developer by trade and an aspiring entrepreneur by heart, based in Aarhus, Denmark. 
+				I'm software developer by trade and an aspiring entrepreneur, based in Aarhus, Denmark. 
 				With a background in Computer Science from Aarhus University and a Bachelor's in IT Architecture from Business Academy Aarhus, 
 				I have developed a strong foundation in the software space.
 			</p>
@@ -98,18 +98,18 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 		
 		</Section>
 
-		<Section title='Posts'>
-			<ul class='flex flex-col gap-y-2'>
-				{
-					allPostsByDate.map((p) => (
+		{allPostsByDate.length > 0 && (
+			<Section title='Posts'>
+				<ul class='flex flex-col gap-y-2'>
+					{allPostsByDate.map((p) => (
 						<li class='flex flex-col gap-x-2 sm:flex-row'>
 							<PostPreview post={p} />
 						</li>
-					))
-				}
-			</ul>
-		</Section>
-
+					))}
+				</ul>
+			</Section>
+		)}
+		
 		<Section title='Experience'>
 			<Card
 				heading='Software Developer'
