--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,9 +115,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Software Developer'
 				subheading='Nitor Energy'
 				date='March 2024 - Present'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/nitor.png'
 				altText='Nitor Energy'
-				imageClass='h-12 w-auto md:-left-16'
+				imageClass='h-12 w-auto md:-left-16 rounded-full'
 				companyWebsite="https://nitorenergy.com"
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
@@ -129,9 +129,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Student Software Developer'
 				subheading='Mjølner Informatics'
 				date='May 2023 - March 2024'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/mjolner.png'
 				altText='Mjølner Informatics'
-				imageClass='h-12 w-auto md:-left-16'
+				imageClass='h-12 w-auto md:-left-16 rounded-full'
 				companyWebsite="https://mjolner.dk"
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
@@ -143,9 +143,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Software Engineering Intern'
 				subheading='FINN GmbH'
 				date='January 2023 - May 2023'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/finn.png'
 				altText='FINN GmbH'
-				imageClass='h-12 w-auto md:-left-16'
+				imageClass='h-12 w-auto md:-left-16 rounded-full'
 				companyWebsite="https://finn.com"
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
@@ -158,9 +158,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Student QA Engineer'
 				subheading='Mjølner Informatics'
 				date='July 2022 - January 2023'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/mjolner.png'
 				altText='Mjølner Informatics'
-				imageClass='h-12 w-auto md:-left-16'
+				imageClass='h-12 w-auto md:-left-16 rounded-full'
 				companyWebsite="https://mjolner.dk"
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
@@ -176,9 +176,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Bachelor of IT Architecture'
 				subheading='Business Academy Aarhus | University of Applied Sciences'
 				date='January 2021 - June 2024'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/eaaa.png'
 				altText='Business Academy Aarhus'
-				imageClass='h-12 w-auto md:-left-16'
+				imageClass='h-12 w-auto md:-left-16 rounded-full'
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>Studied various aspects of IT architecture, including software development, database systems, and cloud computing.</li>
@@ -188,9 +188,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Computer Science'
 				subheading='Aarhus University'
 				date='August 2019 - January 2021'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/au.png'
 				altText='Aarhus University'
-				imageClass='h-12 w-auto md:-left-16'
+				imageClass='h-12 w-auto md:-left-16 rounded-full'
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>Focused on fundamental computer science principles, programming, and algorithms.</li>
